--- a/Appli Dispo pompier/DispoSDIS.html
+++ b/Appli Dispo pompier/DispoSDIS.html
@@ -149,7 +149,7 @@ renderMonths();
 
 <script>
 if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js");
+  navigator.serviceWorker.register("./service-worker.js");
 }
 </script>
 
